Fix scroll bars when dealing tile on narrow screen

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -7,6 +7,9 @@ body {
 
   min-height: 100vh;
 
+  overflow-x: hidden;
+  max-width: 100%;
+
   --bg-color: hsl(212, 75%, 83%);
   --tile-color: hsl(212, 75%, 72%);
   --line-color: hsl(230, 50%, 28%);
